--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "eslint": "8.44.0",
     "eslint-config-next": "^13.4.10",
     "next": "^13.4.10",
